--- a/BlazorApp1/BlazorApp1/Components/Pages/Home.razor
+++ b/BlazorApp1/BlazorApp1/Components/Pages/Home.razor
@@ -2,16 +2,6 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>SUMIT SHAH</h1>
+<h1>Hello, world!</h1>
 
 Welcome to your new app.
-
-@* @{
-    var amount = 1 + 1;
-}
-
-<Counter IncrementAmount = "amount"/> *@
-<Counter/>
-
-<Weather/>
-
